arch,riscv,bbl: add Makefile for dtb

--- a/arch/riscv/bbl/Makefile
+++ b/arch/riscv/bbl/Makefile
@@ -1,2 +1,6 @@
 obj-y += bbl.o dtb.o emulation.o fdt.o flush_icache.o fp_asm.o fp_emulation.o fp_ldst.o logo.o \
 	mentry.o minit.o misaligned_ldst.o mtrap.o muldiv_emulation.o raw_logo.o uart16550.o
+
+arch/riscv/bbl/dtb.S:
+		make -C arch/riscv/bbl/dts
+.PHONY: arch/riscv/bbl/dtb.S
